# value-xbrl-instance-decoder

./: Cargo.toml  README.md  build.gradle  settings.gradle
src/: main.rs
src/main/java/net/value/xbrlDecoder/: XbrlDecoderApplication.java
src/test/java/net/value/xbrlDecoder/: XbrlDecoderApplicationTests.java
test/: my_test.rs
