[package]
name = "xbrl_instance_decoder"
version = "0.1.0"
edition = "2021"
authors = ["Giovanni Mancini"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = { version="0.26.0", features=["async-tokio"]}
reqwest = {version="0.11.12", features=["stream"]}
tokio = {version="1.21.2", features=["rt","macros"]}
tokio-util = { version="0.7.4", features=["io"]}
futures = { version="0.3.25" }